--- a/bms-admin/src/main/webapp/WEB-INF/web.xml
+++ b/bms-admin/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,18 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1"
   	<param-name>contextConfigLocation</param-name>
   	<param-value>classpath:applicationContext.xml</param-value>
   </context-param>
-  
+
   <context-param>
   	<param-name>uploadDirectory</param-name>
   	<param-value>${path.static.file}</param-value>
   </context-param>
   
+  <servlet>
+  	<servlet-name>spring</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>spring</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
