--- a/bms-admin/pom.xml
+++ b/bms-admin/pom.xml
@@ -17,6 +17,7 @@
   	<gson.version>2.8.2</gson.version>
   	<log4j.version>1.2.17</log4j.version>
   	<junit.version>4.12</junit.version>
+  	<jackson.version>2.8.3</jackson.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <skipTests>true</skipTests>
   </properties>
@@ -61,6 +62,11 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-webmvc</artifactId>
 		<version>${spring.version}</version>
+	</dependency>
+	<dependency>
+	   <groupId>com.fasterxml.jackson.core</groupId>
+	   <artifactId>jackson-databind</artifactId>
+	   <version>${jackson.version}</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.google.code.gson</groupId>
