--- a/bms-admin/pom.xml
+++ b/bms-admin/pom.xml
@@ -64,6 +64,11 @@
 		<version>${spring.version}</version>
 	</dependency>
 	<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>4.2.0.Final</version>
+    </dependency>
+	<dependency>
 	   <groupId>com.fasterxml.jackson.core</groupId>
 	   <artifactId>jackson-databind</artifactId>
 	   <version>${jackson.version}</version>
